# MFRC522-python

./: .gitignore  99-realtime.conf  NO_USADO_run_sonico.sh  README.md  add_tag.py  bt_speaker.service  cmd_shell2http.sh  cmd_shell2http.txt  connect_bt.sh  download_song.py  interactive_bluetoothctl.sh  main.py  pyproject.toml  shell2http.service  sonico.py  sonico.service  tags.db
